testsuite/tests/annotations/should_fail/annfail13.stderr

annfail13.hs:4:14: parse error on input ‛1’
